Re-design plans components & Adjust "N" logo in other components

--- a/src/app/components/land-page/land-page.component.html
+++ b/src/app/components/land-page/land-page.component.html
@@ -50,6 +50,7 @@
       <div class="movie" *ngFor="let movie of movies.slice(16, 20)">
         <img [src]="image_path+movie.poster_path" alt="" />
         <!-- <h3>{{ movie.title }}</h3> -->
+      <!-- <span class="number number-frame">1</span> -->
       </div>
     </div>
     <br />
