--- a/src/app/components/plans/plans.component.html
+++ b/src/app/components/plans/plans.component.html
@@ -1,159 +1,184 @@
-<section>
-  <div class="cont">
-    <div class="header">
-      <div class="logo">
-        <img src="../../../assets/images/Netflix_Logo_RGB.png" alt="" />
+  <section>
+    <div class="cont">
+      <div class="header">
+        <div class="logo">
+          <img src="../../../assets/images/Netflix_Logo_RGB.png" alt="" />
+        </div>
+
+        <div class="sign-out">
+          <button>Sign Out</button>
+        </div>
+      </div>
+      <hr />
+
+      <div class="plans-cards-container">
+        
+
+        <div class="plans">
+          <div class="plans-title">
+        <span>STEP 2 OF 3</span>
+        <h2>Choose the plan that’s right for you</h2>
       </div>
 
-      <div class="sign-out">
-        <button>Sign Out</button>
+        <div class="plan cr">
+          <!-- basic -->
+          <div class="plan-card basic-plan">
+            <!-- plan name -->
+            <div class="plan-name">
+              <h3>Basic</h3>
+              <h6>720p</h6>
+              <i class="fa-solid fa-circle-check ico"></i>
+
+            </div>
+            <!-- plan features -->
+            <div class="plan-features">
+              <div class="feat feat1">
+                <span>Monthly price</span>
+                <h6>EGP 100</h6>
+              </div>
+              <hr />
+
+              <div class="feat feat2">
+                <span>Video and sound quality</span>
+                <h6>GOOD</h6>
+              </div>
+              <hr />
+
+              <div class="feat feat3">
+                <span>Resolution</span>
+                <h6>720p (HD)</h6>
+              </div>
+              <hr />
+
+              <div class="feat feat4">
+                <span>Supported devices</span>
+                <h6>TV, computer, mobile phone, tablet</h6>
+              </div>
+              <hr />
+
+              <div class="feat feat5">
+                <span>Devices your household can watch at the same time</span>
+                <h6>1</h6>
+              </div>
+              <hr />
+
+              <div class="feat feat6">
+                <span>Download devices </span>
+                <h6>1</h6>
+              </div>
+            </div>
+          </div>
+          <!-- standard  -->
+          <div class="plan-card standard-plan">
+            <!-- plan name -->
+            <div class="plan-name">
+              <h3>Standard</h3>
+              <h6>1080p</h6>
+              <i class="fa-solid fa-circle-check ico"></i>
+            </div>
+            <!-- plan features -->
+            <div class="plan-features">
+              <div class="feat feat1">
+                <span>Monthly price</span>
+                <h6>EGP 170</h6>
+              </div>
+              <hr />
+
+              <div class="feat feat2">
+                <span>Video and sound quality</span>
+                <h6>GREAT</h6>
+              </div>
+              <hr />
+
+              <div class="feat feat3">
+                <span>Resolution</span>
+                <h6>1080p (Full HD)</h6>
+              </div>
+              <hr />
+
+              <div class="feat feat4">
+                <span>Supported devices</span>
+                <h6>TV, computer, mobile phone, tablet</h6>
+              </div>
+              <hr />
+
+              <div class="feat feat5">
+                <span>Devices your household can watch at the same time</span>
+                <h6>2</h6>
+              </div>
+              <hr />
+
+              <div class="feat feat6">
+                <span>Download devices </span>
+                <h6>2</h6>
+              </div>
+            </div>
+          </div>
+
+    <!-- <div class="most-pop"></div> -->
+          <!-- premium -->
+          
+          <div class="plan-card premium-plan">
+            <div class="most-popular-flag">Most Popular</div>
+            <!-- plan name -->
+            <div class="plan-name">
+              <h3>Premium</h3>
+              <h6>4K + HDR</h6>
+              <i class="fa-solid fa-circle-check ico"></i>
+            </div>
+            <!-- plan features -->
+            <div class="plan-features">
+              <div class="feat feat1">
+                <span>Monthly price</span>
+                <h6>EGP 240</h6>
+              </div>
+              <hr />
+
+              <div class="feat feat2">
+                <span>Video and sound quality</span>
+                <h6>BEST</h6>
+              </div>
+              <hr />
+
+              <div class="feat feat3">
+                <span>Resolution</span>
+                <h6>4K (Ultra HD) + HDR</h6>
+              </div>
+              <hr />
+
+              <div class="feat feat4">
+                <span>Supported devices</span>
+                <h6>TV, computer, mobile phone, tablet</h6>
+              </div>
+              <hr />
+
+              <div class="feat feat5">
+                <span>Devices your household can watch at the same time</span>
+                <h6>4</h6>
+              </div>
+              <hr />
+
+              <div class="feat feat6">
+                <span>Download devices </span>
+                <h6>6</h6>
+              </div>
+            </div>
+          </div>
+        
+
+        </div>
+        </div>
+
+        <div class="note">
+          <span>HD (720p), Full HD (1080p), Ultra HD (4K) and HDR availability subject to your internet service and device capabilities. Not all content is available in all resolutions. See our <a href="#">Terms of Use </a>for more details.</span>
+          <br>
+          <span>Only people who live with you may use your account. Watch on 4 different devices at the same time with Premium, 2 with Standard and 1 with Basic.</span>
+          <br>
+          <span>Live events are included with any Netflix plan and contain ads.</span>  
+        </div>
+        
+
+        <button class="next-btn">Next</button>
       </div>
     </div>
-    <hr />
-
-    <div class="plans-cards-container">
-      <!-- <span class="plans-title">STEP 2 OF 3</span> -->
-      <h2 class="plans-title">Choose the plan that’s right for you</h2>
-
-      <div class="plans">
-        <!-- basic -->
-        <div class="plan-card basic-plan">
-          <!-- plan name -->
-          <div class="plan-name">
-            <h3>Basic</h3>
-            <h6>720p</h6>
-          </div>
-          <!-- plan features -->
-          <div class="plan-features">
-            <div class="feat feat1">
-              <span>Monthly price</span>
-              <h6>EGP 100</h6>
-            </div>
-            <hr />
-
-            <div class="feat feat2">
-              <span>Video and sound quality</span>
-              <h6>GOOD</h6>
-            </div>
-            <hr />
-
-            <div class="feat feat3">
-              <span>Resolution</span>
-              <h6>720p (HD)</h6>
-            </div>
-            <hr />
-
-            <div class="feat feat4">
-              <span>Supported devices</span>
-              <h6>TV, computer, mobile phone, tablet</h6>
-            </div>
-            <hr />
-
-            <div class="feat feat5">
-              <span>Devices your household can watch at the same time</span>
-              <h6>1</h6>
-            </div>
-            <hr />
-
-            <div class="feat feat6">
-              <span>Download devices </span>
-              <h6>1</h6>
-            </div>
-          </div>
-        </div>
-        <!-- standard  -->
-        <div class="plan-card standard-plan">
-          <!-- plan name -->
-          <div class="plan-name">
-            <h3>Standard</h3>
-            <h6>1080p</h6>
-          </div>
-          <!-- plan features -->
-          <div class="plan-features">
-            <div class="feat feat1">
-              <span>Monthly price</span>
-              <h6>EGP 170</h6>
-            </div>
-            <hr />
-
-            <div class="feat feat2">
-              <span>Video and sound quality</span>
-              <h6>GREAT</h6>
-            </div>
-            <hr />
-
-            <div class="feat feat3">
-              <span>Resolution</span>
-              <h6>1080p (Full HD)</h6>
-            </div>
-            <hr />
-
-            <div class="feat feat4">
-              <span>Supported devices</span>
-              <h6>TV, computer, mobile phone, tablet</h6>
-            </div>
-            <hr />
-
-            <div class="feat feat5">
-              <span>Devices your household can watch at the same time</span>
-              <h6>2</h6>
-            </div>
-            <hr />
-
-            <div class="feat feat6">
-              <span>Download devices </span>
-              <h6>2</h6>
-            </div>
-          </div>
-        </div>
-
-        <!-- premium -->
-        <div class="plan-card premium-plan">
-          <!-- plan name -->
-          <div class="plan-name">
-            <h3>Premium</h3>
-            <h6>4K + HDR</h6>
-          </div>
-          <!-- plan features -->
-          <div class="plan-features">
-            <div class="feat feat1">
-              <span>Monthly price</span>
-              <h6>EGP 240</h6>
-            </div>
-            <hr />
-
-            <div class="feat feat2">
-              <span>Video and sound quality</span>
-              <h6>Best</h6>
-            </div>
-            <hr />
-
-            <div class="feat feat3">
-              <span>Resolution</span>
-              <h6>4K (Ultra HD) + HDR</h6>
-            </div>
-            <hr />
-
-            <div class="feat feat4">
-              <span>Supported devices</span>
-              <h6>TV, computer, mobile phone, tablet</h6>
-            </div>
-            <hr />
-
-            <div class="feat feat5">
-              <span>Devices your household can watch at the same time</span>
-              <h6>4</h6>
-            </div>
-            <hr />
-
-            <div class="feat feat6">
-              <span>Download devices </span>
-              <h6>6</h6>
-            </div>
-          </div>
-        </div>
-      </div>
-      <button class="next-btn">Next</button>
-    </div>
-  </div>
-</section>
+  </section>
