--- a/src/app/components/land-page/land-page.component.scss
+++ b/src/app/components/land-page/land-page.component.scss
@@ -28,7 +28,8 @@
     align-items: center;
     gap: 10px;
     /* Space between select and button */
-    margin-right: 30px;
+    // margin-right: 30px;
+    transform: translateX(-100%);
 }
 
 .header .btns button {
@@ -55,8 +56,9 @@
 }
 
 .logo img {
-    width: 20%;
-    margin-left: 30px;
+    width: 15%;
+    // margin-left: 150px;
+    transform: translateX(140%);
 }
 
 .body {
@@ -202,6 +204,22 @@
 
 .trending-now .movies img:hover {
     transform: scale(1.1);
+}
+
+.movies .movie{
+    position: relative;
+}
+
+.number-frame {
+}
+  
+.number {
+    font-size: 120px;
+    color: white;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+
 }
 
 .about {
