--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -21,8 +21,9 @@
 
 
 .logo img{
-    width: 16%;
-    margin-left: 30px;
+    width: 13%;
+    // margin-left: 150px;
+    transform: translateX(140%);
 }
 
 
