--- a/src/app/components/land-page/land-page.component.scss
+++ b/src/app/components/land-page/land-page.component.scss
@@ -1,5 +1,5 @@
 .cont {
-    background-image: url("../../../assets/images/n.jpg");
+    background: linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.5)) ,url("../../../assets/images/n.jpg");
     background-size: cover;
     // background-attachment: fixed;
     background-position: center center;
