--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -4,7 +4,7 @@
 //     background-position: center center;
 // }
 .cont {
-    background-image: url("../../../assets/images/n.jpg");
+    background-image: linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.5)) ,url("../../../assets/images/n.jpg");
     background-size: cover;
     background-attachment: fixed;
     background-position: center center;
