--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -1,131 +1,43 @@
+.home-container {
+  display: flex;
+  background-color: #141414; // Dark background for modern look
+}
+
+.logo img {
+  width: 80%;
+}
+
+.sidebar {
+  border-right: 1px solid #333; // Darker border for subtle separation
+  height: 100vh;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start; // Align items to the top
+  font-family: 'Roboto', sans-serif;
+  font-size: 16px; // Slightly smaller font for modern look
+  position: sticky;
+  top: 0;
+  left: 0;
+  padding: 20px; // Add padding for spacing
+}
+
+.sidebar a {
+  color: white;
+}
 
 
-/*
-// .setting{
-//     width: 50px;
-//     height:75px;
-//     position: fixed;
-//     right: 0;
-//     top:400px;
-//     background-color: white;
-//     border-radius: 15%;
-// }
-// .btn-up
-// {
-//     width: 50px;
-//     height: 50px;
-//     position: fixed;
-//     right: 25px;
-//     bottom: 25px;
-//     border-radius: 50%;
-//     background-color: white;
-//     opacity: 0.5;
-// }
+.sidebar h6 {
+  margin: 20px 0 10px 0; // Add spacing around headings
+  color: gray;
+  font-weight: 700;
+}
 
-// //pesudo elements
-// h1::after{
-//     content: "";
-//     width: 500px;;
-//     height: 5px;
-//     background-color: tomato;
-//     // color: red;
-//     font-size: 20px;
-//     position: absolute;
-//     bottom: 0;
-//     right: 0;;
-// }
+.sidebar i {
+  margin-right: 10px; // Space between icon and text
+}
 
-// h1::before{
-//     content: "";
-//     width: 500px;;
-//     height: 5px;
-//     background-color: tomato;
-//     // color: red;
-//     font-size: 20px;
-//     position: absolute;
-//     top: 0;
-//     left:0;
-// }
+.content {
+  background-color: #1c1c1c; // Dark background for content area
 
-// h1::selection{
-//     color:black;
-//     background-color: red;
-// }
-
-// // h1::first-letter{
-  
-// // }
-
-// .parent{
-//     width: 400px;
-//     height: 400px;
-//     background-color: rgb(71, 187, 255);
-    
-// }
-// .child{
-//     width: 100px;
-//     height: 100px;
-//     background-color:tomato;
-// }
-
-// //hover element
-// .parent:hover .child{
-//     background-color: green;
-//     cursor: pointer;
-// }
-
-// .test{
-// width: 200px;
-// height: 200px;
-// background-color: tomato;
-// transition-property: width;
-// transition-duration: 1s;
-// transition-delay: 1s;
-// //shorthand
-// // transition: width 2s 1s ease;
-// // transition-timing-function: cubic-bezier(0.1, 0.7, 1.0, 0.1);
-// }
-
-// .test:hover{
-//    width:100%;
-  
-// }
-
-// img{
-//     position: absolute;
-//     right: 50%;
-//     top: 50%;
-//     // transform: rotate(50deg);
-//     transition: all 1s;
-//     transform-origin: top left;
-// }
-// img:hover{
-//     transform: rotate(360deg);
-//     // transform: scale(2) rotate(360deg);
-//     // transform: scaleX();
-//     // transform: translateY(100px);
-//     // transform: skew(5deg); // slope
-// }
-*/
-
-.card {
-    border-radius: 10px;
-    overflow: hidden;
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
-  }
-  
-  .card img {
-    height: 250px;
-    object-fit: cover;
-  }
-  
-  .card-body {
-    background-color: #222;
-    color: white;
-    padding: 10px;
-  }
-  
-  .container {
-    max-width: 90%;
-  }
-  
+}
