--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -1,40 +1,13 @@
-<!-- <div class="container-fluid"> 
-  <div class="row">
-
-    <div class="nav-bar d-flex justify-content-between align-items-center">
-  
-      <div class="search-field">
-        
-        <input type="search" placeholder="Search everything..." />
-      </div>
-
-  
-      <div class="nav-items align-items-center">
-   
-        <img src="../../../assets/images/download.png" alt="logo" class="logo" />
-      </div>
-    </div>
-  </div>
-</div> -->
-
 <div class="header">
   <div class="nav-container">
-
-  <div class="cont">
-    <div class="logo">
-      <a href="#">Netflix</a>
+    <div class="cont">
+      <div class="nav-links">
+        <ul>
+          <li class="nav-item"><a routerLink="/movies" class="nav-link" routerLinkActive="active" >Movies</a></li>
+          <li class="nav-item"><a routerLink="/series" class="nav-link" routerLinkActive="active" >Series</a></li>
+          <li class="nav-item"><a routerLink="/tv-shows" class="nav-link" routerLinkActive="active" >TV Shows</a></li>
+        </ul>
+      </div>
     </div>
-
-    <div class="nav-links">
-      <ul>
-        <li ><a class="active" href="#">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Services</a></li>
-        <li><a href="#">Portfolio</a></li>
-        <li><a href="#">Testimonial</a></li>
-      </ul>
-    </div>
-  </div>
-  <div class="clear-fix"></div>
   </div>
 </div>
