--- a/src/app/components/nav/nav.component.scss
+++ b/src/app/components/nav/nav.component.scss
@@ -1,105 +1,67 @@
-// /* Align search field */
-// .search-field input {
-//   width: 265px;
-//   height: 35px;
-//   // border: 0.25px solid white;
-//   color: white;
-//   border-radius: 15px;
-//   background-color: transparent;
-//   padding-left: 10px;
-// }
+$netflix-red: #e50914;
+$netflix-black: #141414;
+$netflix-white: #ffffff;
 
-// /* Logo styling */
-// .logo {
-//   height: 40px;
-//   border-radius: 50%;
-//   border: 3.5px solid rgb(211, 37, 37);
-// }
-
-// /* Navbar Styling */
-// .nav-bar {
-//   margin-left: 100px;
-//   margin-top: 30px;
-//   padding: 15px 50px;
-//   color: white;
-//   display: flex;
-//   justify-content: space-between; /* Moves search to left, logo & name to right */
-//   align-items: center;
-// }
-
-// /* Move logo & name further right */
-// .nav-items {
-//   margin-left:180px; /* Shift more to the right */
-// }
-
-// /* Add space between logo and name */
-// // .nav-items h3 {
-// //   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-// //   margin-right:  20px; 
-// //   font-size: medium;/* Adds more spacing between logo and name */
-// // }
-
-// /* Reduce placeholder font size */
-// .search-field input::placeholder {
-//   font-size: 12px; /* Adjust size */
-//   color: rgba(255, 255, 255, 0.7); /* Light color */
-// }
-body {
-  margin: 0;
-}
-.header .header-content h1{
-margin: 0;
-}
 .header {
-  // background-color: #333;
-  // background-color: aquamarine;
-  color: white;
+  position: fixed;
+  top: 0;
+  right: 0;
+  width: calc(100% - 16.666667%); // Adjust width to account for sidebar
+  z-index: 1000;
+  background: linear-gradient(to bottom, rgba(0,0,0,0.7) 0%, rgba(0,0,0,0));
+  transition: all 0.3s ease;
 }
 
-.header .nav-container{
-  padding: 15px 0;
-}
-.header .nav-container .cont{
-  width: 90%;
-  margin: auto;
+.nav-container {
+  max-width: 1400px;
+  padding: 10px;
 }
 
-.header .nav-container .logo{
-// background-color: white;
-float: left;
+.cont {
+  display: flex;
+  height: 68px;
 }
 
-.header .nav-container .logo a {
-
-  color: #ff3036;
-  font-size: 35px;
-  font-weight: 900;
-}
-.header .nav-container .nav-links{
-float: right;
-}
-.header .nav-container .nav-links .active{
-  color: #ff3036  ;
-}
-
-.header .nav-container li{
-  list-style: none;
-  display: inline-block;
-  font-size: 25px;
-  font-weight: bold;
-  padding: 0  10px;
-}
-
-.header .nav-container li a {
-  color: rgb(0, 0, 0);
-}
- .header .nav-container a{
-  text-decoration: none;
-
- }
-.clear-fix{
-  clear: both;
+.nav-links {
+  ul {
+    display: flex;
+    gap: 20px;
+    list-style: none;
+    padding: 15px;
+    
+    li a {
+      color: $netflix-white;
+      text-decoration: none;
+      font-size: 18px;
+      font-weight: 400;
+      transition: color 0.3s ease;
+      
+      &:hover {
+        color: rgba($netflix-white, 0.7);
+      }
+      
+      &.active {
+        color: $netflix-red;
+        font-weight: 600;
+      }
+    }
+  }
 }
 
-
-
+@media (max-width: 768px) {
+  .cont {
+    flex-direction: column;
+    height: auto;
+    padding: 15px 0;
+  }
+  
+  .logo {
+    margin-bottom: 10px;
+  }
+  
+  .nav-links ul {
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 15px;
+  }
+}
