feat: add ngx-owl-carousel-o for movie carousel and enhance movie display with star ratings

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -106,6 +106,14 @@
       <app-nav></app-nav>
       <div class="content-body">
         <h4>Trending Movies</h4>
+        <!-- <owl-carousel-o [options]="customOptions">
+          <ng-container class="movie-container cr" *ngFor="let movie of movies">
+            <ng-template carouselSlide [id]="movie.id">
+              <img [src]="image_path + movie.poster_path" [alt]="movie.title" [title]="movie.title" />
+            </ng-template>
+          </ng-container>
+        </owl-carousel-o> -->
+
         <div class="trend-movies">
           <div class="movie-container cr" *ngFor="let movie of movies">
             <div class="image">
@@ -115,11 +123,23 @@
                   <div class="movie-info">
                     <h6>{{ movie.title }}</h6>
                     <p>{{ movie.release_date | date : "yyyy" }}</p>
-                    <span>{{ movie.vote_average }} rate</span>
+                    <span>
+                      {{ movie.vote_average | number : "1.1-1" }}
+                      <i
+                        *ngFor="let star of getStarRating(movie.vote_average)"
+                        class="fa-solid fa-star"
+                        [ngClass]="{ filled: star === 1, empty: star === 0 }"
+                      >
+                      </i>
+                    </span>
                   </div>
                   <div class="movie-btns">
-                    <button>Watch now</button>
-                    <button>+</button>
+                    <button class="watch-btn">
+                      <i class="fa-solid fa-play"></i> Watch now
+                    </button>
+                    <button id="plus-btn">
+                      <i class="fa-solid fa-plus"></i>
+                    </button>
                   </div>
                 </div>
               </div>
