--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,5 @@
-.cr{
-    cursor: pointer;
+@import "ngx-owl-carousel-o/lib/styles/scss/owl.carousel";
+@import "ngx-owl-carousel-o/lib/styles/scss/owl.theme.default";
+.cr {
+  cursor: pointer;
 }
